# CmakeQt

./: ALL_BUILD.vcxproj  Bullet.h  CMakeCache.txt  CMakeLists.txt  Enemy.h  Game.h  Health.cpp  Health.h  Player.h  Score.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calculator.vcxproj  calculator.vcxproj.filters  calculator_widget.sln  cmake_install.cmake  res.qrc
calculator_autogen/: mocs_compilation.cpp
calculator_autogen/include_Debug/EWIEGA46WW/: moc_Bullet.cpp  moc_Enemy.cpp  moc_Player.cpp  moc_mainwindow.cpp
calculator_autogen/include_MinSizeRel/EWIEGA46WW/: qrc_res_CMAKE_.cpp
